force-app/main/default/objects/CommercientSF__PorMasterHdr__c/CommercientSF__PorMasterHdr__c.object-meta.xml
<CustomObject>
    <label>Syspro Purchase Order Header</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Purchase Order Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>