force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Account__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syspro Purchase Order Headers</relationshipLabel>
    <relationshipName>Syspro_Purchase_Order_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>