force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__ActiveFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ActiveFlag__c</fullName>
    <description>ActiveFlag</description>
    <label>ActiveFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>