force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__AmendedCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AmendedCount__c</fullName>
    <description>AmendedCount</description>
    <label>AmendedCount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>