force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__AutoUpdatePo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AutoUpdatePo__c</fullName>
    <description>AutoUpdatePo</description>
    <label>AutoUpdatePo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>