force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Buyer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Buyer__c</fullName>
    <description>Buyer</description>
    <label>Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>