force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__CancelledFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CancelledFlag__c</fullName>
    <description>CancelledFlag</description>
    <label>CancelledFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>