force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ContractNumber__c</fullName>
    <description>ContractNumber</description>
    <label>ContractNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>