force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__CountyZip__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CountyZip__c</fullName>
    <description>CountyZip</description>
    <label>CountyZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>