force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Currency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Currency__c</fullName>
    <description>Currency</description>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>