force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DateLastDocPrt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastDocPrt__c</fullName>
    <description>DateLastDocPrt</description>
    <label>DateLastDocPrt</label>
    <type>DateTime</type>
</CustomField>