force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DatePoCompleted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DatePoCompleted__c</fullName>
    <description>DatePoCompleted</description>
    <label>DatePoCompleted</label>
    <type>DateTime</type>
</CustomField>