force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryAddr1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryAddr1__c</fullName>
    <description>DeliveryAddr1</description>
    <label>DeliveryAddr1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>