force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryAddr2__c</fullName>
    <description>DeliveryAddr2</description>
    <label>DeliveryAddr2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>