force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryAddr3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryAddr3__c</fullName>
    <description>DeliveryAddr3</description>
    <label>DeliveryAddr3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>