force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryAddr3Loc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryAddr3Loc__c</fullName>
    <description>DeliveryAddr3Loc</description>
    <label>DeliveryAddr3Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>