force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryGpsLat__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryGpsLat__c</fullName>
    <description>DeliveryGpsLat</description>
    <label>DeliveryGpsLat</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>