force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryGpsLong__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryGpsLong__c</fullName>
    <description>DeliveryGpsLong</description>
    <label>DeliveryGpsLong</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>