force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryMethod__c</fullName>
    <description>DeliveryMethod</description>
    <label>DeliveryMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>