force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryName__c</fullName>
    <description>DeliveryName</description>
    <label>DeliveryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>