force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryTerms__c</fullName>
    <description>DeliveryTerms</description>
    <label>DeliveryTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>