force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DiscPct1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct1__c</fullName>
    <description>DiscPct1</description>
    <label>DiscPct1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>