force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DiscPct2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct2__c</fullName>
    <description>DiscPct2</description>
    <label>DiscPct2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>