force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DiscPct3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct3__c</fullName>
    <description>DiscPct3</description>
    <label>DiscPct3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>