force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__DocumentFormat__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DocumentFormat__c</fullName>
    <description>DocumentFormat</description>
    <label>DocumentFormat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>