force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__EdiActionFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiActionFlag__c</fullName>
    <description>EdiActionFlag</description>
    <label>EdiActionFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>