force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__EdiConfirmation__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiConfirmation__c</fullName>
    <description>EdiConfirmation</description>
    <label>EdiConfirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>