force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__EdiExtractFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiExtractFlag__c</fullName>
    <description>EdiExtractFlag</description>
    <label>EdiExtractFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>