force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__EdiPoFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiPoFlag__c</fullName>
    <description>EdiPoFlag</description>
    <label>EdiPoFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>