force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExchangeRate__c</fullName>
    <description>ExchangeRate</description>
    <label>ExchangeRate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>