force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__ExchRateFixed__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExchRateFixed__c</fullName>
    <description>ExchRateFixed</description>
    <label>ExchRateFixed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>