force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__FaxDocument__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxDocument__c</fullName>
    <description>FaxDocument</description>
    <label>FaxDocument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>