force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LanguageCode__c</fullName>
    <description>LanguageCode</description>
    <label>LanguageCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>