force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__MemoCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MemoCode__c</fullName>
    <description>MemoCode</description>
    <label>MemoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>