force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__MemoDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MemoDate__c</fullName>
    <description>MemoDate</description>
    <label>MemoDate</label>
    <type>DateTime</type>
</CustomField>