force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__NextDetailLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextDetailLine__c</fullName>
    <description>NextDetailLine</description>
    <label>NextDetailLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>