force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderDueDate__c</fullName>
    <description>OrderDueDate</description>
    <label>OrderDueDate</label>
    <type>DateTime</type>
</CustomField>