force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__OrderEntryDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderEntryDate__c</fullName>
    <description>OrderEntryDate</description>
    <label>OrderEntryDate</label>
    <type>DateTime</type>
</CustomField>