force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderStatus__c</fullName>
    <description>OrderStatus</description>
    <label>OrderStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>