force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PaymentTerms__c</fullName>
    <description>PaymentTerms</description>
    <label>PaymentTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>