force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostalCode__c</fullName>
    <description>PostalCode</description>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>