force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__PrintCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrintCount__c</fullName>
    <description>PrintCount</description>
    <label>PrintCount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>