force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__ShippingInstrs__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShippingInstrs__c</fullName>
    <description>ShippingInstrs</description>
    <label>ShippingInstrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>