force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Supplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Supplier__c</fullName>
    <description>Supplier</description>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>