force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Syspro_AP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_AP_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AP Supplier</label>
    <referenceTo>CommercientSF__ApSupplier__c</referenceTo>
    <relationshipLabel>Syspro Purchase Order Headers</relationshipLabel>
    <relationshipName>Syspro_Purchase_Order_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>