force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__Syspro_Customer_Record__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Customer_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Customer Record</label>
    <referenceTo>CommercientSF__ArCustomer__c</referenceTo>
    <relationshipLabel>Syspro Purchase Order Headers</relationshipLabel>
    <relationshipName>Syspro_Purchase_Order_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>