force-app/main/default/objects/CommercientSF__PorMasterHdr__c/fields/CommercientSF__UserConfirmation__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserConfirmation__c</fullName>
    <description>UserConfirmation</description>
    <label>UserConfirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>